# locatelback

./: .gitignore  Dockerfile  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt
api/framework/: serializers.py
api/framework/routers/: root.py
api/src/: handlers.py  models.py  proccess.py  querysets.py
config/: __init__.py
