[tool.poetry]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = ["Oscar Cely <oscarcej@gmail.com>"]

packages = [
    { include = "config" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "config:start"